--- a/condition.html
+++ b/condition.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/scss/main.css" />
   </head>
-  <body>
-    <div class="header-backround-pages">
+  <body class="universal-backround">
       <!-- header start -->
       <header>
         <div class="color-black">
@@ -74,8 +73,7 @@
                 <div class="container">
                   <div class="header-list-down">
                     <div class="logo col-2 col-md-6">
-                      <a href="./index.html">                      
-                        <svg
+                      <a href="./index.html">                      <svg
                         class="red-fill"
                         width="122"
                         height="24"
@@ -97,14 +95,14 @@
                           d="M20.268 18.42 13.916 12l6.352-6.42a1.471 1.471 0 0 0 0-2.064 1.434 1.434 0 0 0-2.043 0l-6.351 6.42-6.352-6.42a1.433 1.433 0 0 0-2.042 0 1.47 1.47 0 0 0 0 2.064L9.832 12 3.48 18.42a1.47 1.47 0 0 0 0 2.064c.564.57 1.479.57 2.042 0l6.352-6.42 6.351 6.42c.564.57 1.479.57 2.043 0a1.471 1.471 0 0 0 0-2.064Z"
                           fill="#FFA000"
                         ></path>
-                        </svg></a>
+                      </svg></a>
                     </div>
                     <div class="header-list-wrapper col-8">
                       <ul class="color-black">
                         <li><a href="./condition.html">Dasima sertleri</a></li>
                         <li><a href="./gel">Gel al noqtesi/filiallar</a></li>
                         <li><a href="./services.html">Xidmetler</a></li>
-                        <li><a href="./rates.html">Tarifler</a></li>
+                        <li><a href="./.html">Tarifler</a></li>
                         <li><a href="./news.html">Xeberler</a></li>
                         <li><a href="./contact.html">Elaqe</a></li>
                       </ul>
@@ -782,6 +780,5 @@
         </div>
       </footer>
       <!-- footer end -->
-    </div>
   </body>
 </html>
