--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       <li><a href="./condition.html">Dasima sertleri</a></li>
                       <li><a href="./gelal.html">Gel al noqtesi/filiallar</a></li>
                       <li><a href="./services.html">Xidmetler</a></li>
-                      <li><a href="./rates.html">Tarifler</a></li>
+                      <li><a href="./.html">Tarifler</a></li>
                       <li><a href="./news.html">Xeberler</a></li>
                       <li><a href="./contact.html">Elaqe</a></li>
                     </ul>
