--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <a href="./gelal.html">Gel al noqtesi/filiallar</a>
                       </li>
                       <li><a href="./services.html">Xidmetler</a></li>
-                      <li><a href="./.html">Tarifler</a></li>
+                      <li><a href="./rates.html">Tarifler</a></li>
                       <li><a href="./news.html">Xeberler</a></li>
                       <li><a href="./contact.html">Elaqe</a></li>
                     </ul>
@@ -246,8 +246,8 @@
 
     <main>
       <!-- step-by-step section start -->
-      <!-- <section id="step-by-step">
-        <div class="container">
+     <section id="step-by-step">
+        <!-- <div class="container">
           <div class="row title">
             <div class="title-steps">
               <div class="title">
@@ -312,8 +312,8 @@
               <button class="btn">Sifaris edin</button>
             </div>
           </div>
-        </div>
-      </section> -->
+        </div> -->
+      </section>
       <!-- step-by-step section start -->
 
       <!-- pickUpPoints section start -->
@@ -364,8 +364,8 @@
             <div class="pickUp-map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12151.666629739711!2d49.92777655!3d40.41069705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1str!2saz!4v1722335986408!5m2!1str!2saz"
-                width="600"
-                height="450"
+                width="1000"
+                height="850"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
@@ -391,7 +391,7 @@
             </div>
           </div>
           <div class="services-cards row">
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <svg
                   width="26"
@@ -436,7 +436,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <svg
                   width="26"
@@ -481,7 +481,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <svg
                   width="26"
@@ -526,7 +526,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <svg
                   width="26"
@@ -571,9 +571,7 @@
                 </p>
               </div>
             </div>
-          </div>
-          <div class="services-cards row">
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <img src="./assets/scss/images/services-card-1.png" alt="" />
               </div>
@@ -585,7 +583,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <img src="./assets/scss/images/services-card-2.png" alt="" />
               </div>
@@ -597,7 +595,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <img src="./assets/scss/images/services-card-3png.png" alt="" />
               </div>
@@ -609,7 +607,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-card col-3 col-md-6">
+            <div class="services-card">
               <div class="card-svg">
                 <svg
                   width="32"
@@ -652,9 +650,9 @@
       <!-- services section start -->
 
       <!-- starex-about section start -->
-      <!-- <section id="starex-about">
-        <div class="about-image row">
-          <div class="about col-6">
+      <section id="starex-about">
+        <div class="about-image">
+          <div class="about">
             <div class="title">
               <h3>Haqqimizda</h3>
               <p>
@@ -755,15 +753,15 @@
               </div>
             </div>
           </div>
-          <div class="image col-6">
+          <div class="image">
             <img src="./assets/scss/images/about-cover.jpeg" alt="" />
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- starex-about section end -->
 
       <!-- calculator section start -->
-      <!-- <section id="calculator">
+       <section id="calculator">
         <div class="center">
           <div class="calc col-6">
             <div class="title">
@@ -794,20 +792,22 @@
                 <input type="text" placeholder="en(sm)" />
                 <input type="text" placeholder="hundurluk(sm)" />
                 <div class="total">Cəmi: $0</div>
-              </div>
+                <div class="zero">Sıfırla:</div>
+              </div>   
             </div>
+            <div class="total-responsive">Cəmi: $0</div>
           </div>
         </div>
-      </section>  -->
+      </section>
       <!-- calculator section start -->
 
       <!-- news section start -->
-      <!-- <section id="news">
+      <section id="news">
         <div class="container">
           <div class="news-title">
             <h2>Xeberler</h2>
           </div>
-          <div class="row">
+          <div class="card-container row">
             <div class="news-card col-4">
               <div class="img-up">
                 <img
@@ -918,11 +918,11 @@
             </div>
           </div>
         </div>
-      </section>  -->
+      </section>
       <!-- news section start -->
 
       <!-- mobile-app section start -->
-      <!-- <section id="mobile-app">
+       <section id="mobile-app">
         <div class="container row">
           <div class="mobile-title col-6">
             <div class="title">
@@ -954,13 +954,13 @@
             />
           </div>
         </div>
-      </section>  -->
+      </section> 
       <!-- mobile-app section start -->
     </main>
     <!-- main end -->
 
     <!-- footer start -->
-    <!-- <footer>
+    <footer>
       <div class="footer container row">
         <div class="footer-logo col-3">
           <div class="logo-svg">
@@ -1056,6 +1056,25 @@
             <li>Linkedn</li>
           </ul>
         </div>
+        <div class="footer-content footer-responsive-tel">
+          <div class="tel-svg">
+            <svg
+              width="18"
+              height="17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="m13.588 11.027-3.088.598C8.413 10.578 7.125 9.375 6.375 7.5l.577-3.098L5.862 1.5H3.047c-.846 0-1.512.699-1.385 1.535.315 2.087 1.245 5.873 3.962 8.59 2.854 2.854 6.964 4.092 9.226 4.585.874.19 1.649-.492 1.649-1.386v-2.688l-2.912-1.11Z"
+                stroke="#8C8C8C"
+                stroke-width="1.5"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              ></path>
+            </svg>
+            <span>*8000</span>
+          </div>
+        </div>
       </div>
       <div class="copyright container">
         <p>
@@ -1063,7 +1082,7 @@
           Hüquqlar Qorunur
         </p>
       </div>
-    </footer> -->
+    </footer>
     <!-- footer end -->
   </body>
 </html>
