--- a/condition.html
+++ b/condition.html
@@ -72,6 +72,20 @@
               <div class="header-border">
                 <div class="container">
                   <div class="header-list-down">
+                    <div class="btn-toggle">
+                      <svg
+                        class="toggle-svg"
+                        width="18"
+                        height="18"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M2.25 3.75h13.5M2.25 9h13.5m-13.5 5.25h13.5"
+                          stroke="#595959"
+                        ></path>
+                      </svg>
+                    </div>
                     <div class="logo col-2 col-md-6">
                       <a href="./index.html">                      <svg
                         class="red-fill"
@@ -110,6 +124,82 @@
                     <div class="header-declare col-2 col-md-6">
                       <button class="btn">Hevale et</button>
                       <button class="btn-yellow">Beyan et</button>
+                    </div>
+                    <div class="buttons-side col-md-6">
+                      <a
+                        class="btn-order"
+                        href="https://cabinet.starex.az/orders/new"
+                      >
+                        <svg
+                          width="18"
+                          height="18"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="starexicon d-lg-none"
+                        >
+                          <g
+                            clip-path="url(#cart-blue_svg__a)"
+                            stroke="#005AFF"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          >
+                            <path
+                              d="M14.625 16.5a1.125 1.125 0 1 0 0-2.25 1.125 1.125 0 0 0 0 2.25Zm-7.5 0a1.125 1.125 0 1 0 0-2.25 1.125 1.125 0 0 0 0 2.25Z"
+                              fill="#005AFF"
+                            ></path>
+                            <path
+                              d="M3.75 3H16.5L15 11.25M3.75 3l1.5 8.25H15M3.75 3C3.625 2.5 3 1.5 1.5 1.5M15 11.25H3.922c-1.338 0-2.047.586-2.047 1.5s.71 1.5 2.047 1.5h10.703"
+                            ></path>
+                          </g>
+                          <defs>
+                            <clipPath id="cart-blue_svg__a">
+                              <path fill="#fff" d="M0 0h18v18H0z"></path>
+                            </clipPath>
+                          </defs></svg></a
+                      ><a
+                        class="btn-declare"
+                        href="https://cabinet.starex.az/parcels/new"
+                      >
+                        <svg
+                          width="18"
+                          height="18"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="starexicon d-lg-none"
+                        >
+                          <path
+                            d="M6 7.5h6m-6 6h6m-6-3h3m-6 5.55V1.95a.45.45 0 0 1 .45-.45h8.739a.45.45 0 0 1 .318.132l2.361 2.361a.45.45 0 0 1 .132.32V16.05a.448.448 0 0 1-.45.45H3.45a.448.448 0 0 1-.45-.45Z"
+                            stroke="#FFA000"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path>
+                          <path
+                            d="M12 1.5v2.55a.45.45 0 0 0 .45.45H15"
+                            stroke="#FFA000"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path></svg></a
+                      ><a
+                        class="btn-profile d-lg-none"
+                        href="https://cabinet.starex.az"
+                        ><svg
+                          width="18"
+                          height="18"
+                          fill="none"
+                          xmlns="http://www.w3.org/2000/svg"
+                          class="starexicon"
+                        >
+                          <path
+                            d="M9 9a5.25 5.25 0 0 0-5.25 5.25V15l10.5-.03M9 9a5.25 5.25 0 0 1 5.25 5.25v.72M9 9a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm5.25 6v-.03"
+                            stroke="#595959"
+                            stroke-width="1.5"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                          ></path></svg
+                      ></a>
                     </div>
                   </div>
                 </div>
