--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <div class="logo col-2 col-md-6">
+                  <div class="logo col-1 col-md-6">
                     <a href="./index.html">
                       <svg
                         width="122"
@@ -118,19 +118,19 @@
                         ></path></svg
                     ></a>
                   </div>
-                  <div class="header-list-wrapper col-8">
+                  <div class="header-list-wrapper col-10">
                     <ul class="color-white">
-                      <li><a href="./condition.html">Dasima sertleri</a></li>
+                      <li><a href="./condition.html">Daşıma şərtləri</a></li>
                       <li>
-                        <a href="./gelal.html">Gel al noqtesi/filiallar</a>
+                        <a href="./gelal.html">Gəl al nöqtəsi/filiallar</a>
                       </li>
-                      <li><a href="./services.html">Xidmetler</a></li>
-                      <li><a href="./rates.html">Tarifler</a></li>
-                      <li><a href="./news.html">Xeberler</a></li>
-                      <li><a href="./contact.html">Elaqe</a></li>
+                      <li><a href="./services.html">Xidmətlər</a></li>
+                      <li><a href="./rates.html">Tariflər</a></li>
+                      <li><a href="./news.html">Xəbərlər</a></li>
+                      <li><a href="./contact.html">Əlaqə</a></li>
                     </ul>
                   </div>
-                  <div class="header-declare col-2 col-md-6">
+                  <div class="header-declare col-1 col-md-6">
                     <button class="btn">Hevale et</button>
                     <button>Beyan et</button>
                   </div>
@@ -247,7 +247,7 @@
     <main>
       <!-- step-by-step section start -->
      <section id="step-by-step">
-        <!-- <div class="container">
+         <div class="container">
           <div class="row title">
             <div class="title-steps">
               <div class="title">
@@ -258,7 +258,7 @@
                 </p>
               </div>
               <div class="steps row">
-                <div class="step-login-order-payment-delivry col-3 col-md-5">
+                <div class="step-login-order-payment-delivry col-3">
                   <div class="icon">
                     <i class="fa-solid fa-truck"></i>
                   </div>
@@ -270,7 +270,7 @@
                     vasitəsi ilə əldə edə bilərsiniz.
                   </p>
                 </div>
-                <div class="step-login-order-payment-delivry col-3 col-md-5">
+                <div class="step-login-order-payment-delivry col-3">
                   <div class="icon">
                     <i class="fa-solid fa-truck"></i>
                   </div>
@@ -282,7 +282,7 @@
                     vasitəsi ilə əldə edə bilərsiniz.
                   </p>
                 </div>
-                <div class="step-login-order-payment-delivry col-3 col-md-5">
+                <div class="step-login-order-payment-delivry col-3">
                   <div class="icon">
                     <i class="fa-solid fa-truck"></i>
                   </div>
@@ -294,7 +294,7 @@
                     vasitəsi ilə əldə edə bilərsiniz.
                   </p>
                 </div>
-                <div class="step-login-order-payment-delivry col-3 col-md-5">
+                <div class="step-login-order-payment-delivry col-3">
                   <div class="icon">
                     <i class="fa-solid fa-truck"></i>
                   </div>
@@ -312,7 +312,7 @@
               <button class="btn">Sifaris edin</button>
             </div>
           </div>
-        </div> -->
+        </div>
       </section>
       <!-- step-by-step section start -->
 
